--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .top-page {
-    font-family: 'Bungee Shade', cursive;
+
+    font-family: 'Ubuntu', sans-serif;
     color: #AAABB8;
     letter-spacing: -2px;
     border-style: hidden;
@@ -12,7 +13,7 @@
 }
 
 .student-information {
-    font-family: 'BioRhyme', serif;
+    font-family: 'Open Sans', sans-serif;
     background-color: #AAABB8;
     border-style: hidden;
     text-align: center;
