--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
 
 .top-page {
     font-family: 'Ubuntu', sans-serif;
-    letter-spacing: -2px;
+    background-color: #2E93D2;
     text-align: center;
+    color: #ebebf6;
     width: 100%;
+    padding: 25px;
+    margin: 25x;
     display: inline-block;
 }
 
@@ -13,16 +16,20 @@
 .student-information {
     font-family: 'Open Sans', sans-serif;
     text-align: center;
+    color: #032859;
     width: 100%;
+    padding: 25px;
+    margin: 25x;
     display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
+    
 }
 
 .form-head {
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
     width: 50%;
+    padding: 5px;
+    margin: 25x;
     display: inline-block;
 }
 
@@ -30,5 +37,7 @@
     font-family: 'Open Sans', sans-serif;
     text-align: center;
     width: 50%;
+    padding: 5px;
+    margin: 25x;
     display: inline-block;
 }
