--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 .top-page {
     font-family: 'Ubuntu', sans-serif;
-    background-color: #2E93D2;
+    background-color: #0eb26d;
     text-align: center;
     color: #ebebf6;
     width: 100%;
@@ -11,33 +11,31 @@
     display: inline-block;
 }
 
-/*paragraph text */
-
-.student-information {
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-    color: #032859;
-    width: 100%;
-    padding: 25px;
-    margin: 25x;
-    display: inline-block;
+.flex-container {
+    padding: 0;
+    margin: 0;
+    list-style: none;
     
-}
-
-.form-head {
-    font-family: 'Ubuntu', sans-serif;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+  }
+  
+  .flex-item {
+    background: tomato;
+    padding: 50px;
+    width: 400px;
+    height: 250px;
+    margin-top: 20px;
+    
+    line-height: 150px;
+    color: white;
+    font-weight: bold;
+    font-size: 3em;
     text-align: center;
-    width: 50%;
-    padding: 5px;
-    margin: 25x;
-    display: inline-block;
-}
-
-.yearbook-pick-form {
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-    width: 50%;
-    padding: 5px;
-    margin: 25x;
-    display: inline-block;
-}
+  }
