--- a/style.css
+++ b/style.css
@@ -52,6 +52,19 @@
 
 
 
+@media screen and (max-width: 800px) {
+    .card-carousel {
+      visibility: hidden;
+      clear: both;
+      float: left;
+      margin: 10px auto 5px 20px;
+      width: 28%;
+      display: none;
+    }
+  }
+
+
+
 
   .card-carousel {
     display: flex;
