--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 /*** Header area */
 
 .top-page {
-    font-family: 'Ubuntu', sans-serif;
-    background-color: #0eb26d;
+    font-family: 'Roboto', sans-serif;
+    background-color: tomato;
     text-align: center;
-    color: #ebebf6;
+    padding: 25px 0;
+    color: #000000;
     width: 100%;
-    padding: 25px;
+    position: relative;
     margin: 25x;
     display: inline-block;
+    border-radius: 10px;
+    font-size: 50px;
+
+
 }
 
 .flex-container {
@@ -27,17 +32,19 @@
   }
   
   .flex-item {
+    font-family: 'Roboto';
     background: tomato;
-    padding: 50px;
+    color: #000000;
+    padding: 45px;
     width: 400px;
     height: 250px;
     margin-top: 20px;
-    
+    border-radius: 10px;
     line-height: 150px;
-    color: white;
-    font-weight: bold;
+    color: #000000;
     font-size: 3em;
     text-align: center;
+    align-items: flex-start;
   }
 
 
@@ -84,7 +91,10 @@
     cursor: pointer;
     pointer-events: none;
     background: tomato;
+    color: #000000;
     transition: 1s;
+    border-radius: 10px;
+
   }
   
   .card-carousel .my-card:after {
@@ -180,3 +190,20 @@
     font-weight: 300;
     color: #fff;
   }
+
+
+  .bottom-page {
+    font-family: 'Roboto', sans-serif;
+    background-color: tomato;
+    color: #000000;
+    text-align: center;
+    padding: 25px 0;
+    width: 100%;
+    position: relative;
+    margin: 25x;
+    display: inline-block;
+    border-radius: 10px;
+    font-size: 25px;
+    letter-spacing: 40px;
+
+}
