--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Playfair Display", serif;
   
 }
 
@@ -14,6 +14,7 @@ header {
   text-align: center;
   font-size: 35px;
   color: black;
+  font-weight: 700;
 }
 
 /* Container for flexboxes */
@@ -29,8 +30,18 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #f1f1f1;
   padding: 25px;
+}
+
+/*styling for middle boxes */
+
+.content-left {
+background-color: lightgray;
+}
+
+.content-right {
+background-color: #b4b4b4;
+
 }
 
 
@@ -38,7 +49,7 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: black;
+  background-color: #787878;
   padding: 25px;
   color: white;
   list-style: none;
@@ -49,11 +60,15 @@ article {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: #3c3c3c;
   padding: 10px;
   text-align: center;
   color: white;
 }
+
+
+
+
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 600px) {
