--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ i:hover, i:active {
   
 } 
 
+a:link {
+  color: #787878;
+}
+
+a:visited {
+  color: #787878;
+}
+
 
 
 
@@ -74,16 +82,16 @@ background-color: #b4b4b4;
   margin-bottom:15px;
   margin-top: 15px;
 	width:100%;
-	background:#eee;
+	background:whitesmoke;
 	height:35px;
 	border-radius:3px;
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
-	-webkit-transition:0.4s linear;
-	-moz-transition:0.4s linear;
-	-ms-transition:0.4s linear;
-	-o-transition:0.4s linear;
-	transition:0.4s linear;
+	-webkit-transition:0.6s linear;
+	-moz-transition:0.6s linear;
+	-ms-transition:0.6s linear;
+	-o-transition:0.6s linear;
+	transition:0.6s linear;
 	-webkit-transition-property:width, background-color;
 	-moz-transition-property:width, background-color;
 	-ms-transition-property:width, background-color;
@@ -95,7 +103,7 @@ background-color: #b4b4b4;
 	position:absolute;
 	top:0;
 	left:0;
-width:185px;
+  width:185px;
 	color:#ffffff;
 	background:#6adcfa;
 	-webkit-border-top-left-radius:3px;
@@ -157,7 +165,7 @@ width:185px;
 /* Style the footer */
 footer {
   background-color: #3c3c3c;
-  padding: 10px;
+  padding: 35px;
   text-align: center;
   color: white;
 }
