--- a/style.css
+++ b/style.css
@@ -17,20 +17,19 @@ header {
   padding-bottom: 20px;
 }
 
+/* sudo nav/link bar with social icon's */
+
 i {
   padding: 10px;
-
 }
 
 .links {
   color: #787878;
 }
 
-
 i:hover, i:active {
   color: black;
   transform: scale(1.7);
-  
 } 
 
 a:link {
@@ -73,7 +72,7 @@ background-color: #b4b4b4;
 }
 
 
-/*skillz bar */
+/*skillz bar formatting */
 
 
 .skillbar {
@@ -117,6 +116,7 @@ background-color: #b4b4b4;
 .skillbar-title span {
 	display:block;
 	background:rgba(0, 0, 0, 0.1);
+	opacity: 1;
 	padding:0 20px;
 	height:35px;
 	line-height:35px;
@@ -131,7 +131,6 @@ background-color: #b4b4b4;
 .skillbar-bar {
 	height:35px;
 	width:0px;
-	background:#6adcfa;
 	border-radius:3px;
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
@@ -149,6 +148,50 @@ background-color: #b4b4b4;
 }
 
 
+#html-title {
+	background: #3E204E;
+}
+#html-bar {
+	background: #3E204E;
+	opacity:0.6;
+}
+
+#css-title {
+	background: #594565;
+}
+#css-bar {
+	background: #594565;
+	opacity:0.6;
+}
+
+#c-sharp-title {
+	background: #BAAECB;
+}
+#c-sharp-bar {
+	background: #BAAECB;
+	opacity:0.6;
+}
+
+#dot-net-title {
+	background: #E1DAE7;
+}
+#dot-net-bar {
+	background: #E1DAE7;
+	opacity:0.6;
+}
+
+#javascript-title {
+	background: #BAAECB;
+}
+#javascript-bar {
+	background: #BAAECB;
+	opacity:0.6;
+}
+
+
+
+/* 3rd div styling and layout */
+
 .pre-footer {
   -webkit-flex: 3;
   -ms-flex: 3;
@@ -163,6 +206,7 @@ background-color: #b4b4b4;
 
 
 /* Style the footer */
+
 footer {
   background-color: #3c3c3c;
   padding: 35px;
@@ -172,9 +216,8 @@ footer {
 
 
 
-
-
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+
 @media (max-width: 600px) {
   section {
     -webkit-flex-direction: column;
